--- a/built-in-directives/src/styles.css
+++ b/built-in-directives/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import './app/vendor/semantic.min.css';
+.container {
+  margin-top: 10px;
+}
