add ngclass example

--- a/built-in-directives/src/app/app.component.html
+++ b/built-in-directives/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-if-example></app-if-example>
 <app-switch-example></app-switch-example>
 <app-ng-style-example></app-ng-style-example>
+<app-ng-class-example></app-ng-class-example>
