--- a/forms/src/app/demo-form-sku-custom-validator/demo-form-sku-custom-validator.component.html
+++ b/forms/src/app/demo-form-sku-custom-validator/demo-form-sku-custom-validator.component.html
@@ -13,7 +13,7 @@
       <div *ngIf="myForm.controls['sku'].hasError('required')"
            class="ui error message visible">SKU is required</div>
       <div *ngIf="myForm.controls['sku'].hasError('invalidSku')"
-           20 class="ui error message">SKU must begin with <span>123</span></div>
+           class="ui error message visible">SKU must begin with <span>123</span></div>
     </div>
     <div *ngIf="!myForm.valid" class="ui error message visible">Form is invalid</div>
     <button type="submit" class="ui button">Submit</button>
