--- a/forms/src/app/demo-form-sku-custom-validator/demo-form-sku-custom-validator.component.html
+++ b/forms/src/app/demo-form-sku-custom-validator/demo-form-sku-custom-validator.component.html
@@ -10,12 +10,12 @@
              id="skuInput"
              placeholder="SKU"
              [formControl]="myForm.controls['sku']">
-      <div *ngIf="myForm.controls['sku'].hasError('required')"
-           class="ui error message visible">SKU is required</div>
-      <div *ngIf="myForm.controls['sku'].hasError('invalidSku')"
-           class="ui error message visible">SKU must begin with <span>123</span></div>
+      <div [ngClass]="{visible: myForm.controls['sku'].hasError('required')}"
+           class="ui error message">SKU is required</div>
+      <div [ngClass]="{visible: !myForm.controls['sku'].hasError('required') && myForm.controls['sku'].hasError('invalidSku')}"
+           class="ui error message">SKU must begin with <span>123</span></div>
     </div>
-    <div *ngIf="!myForm.valid" class="ui error message visible">Form is invalid</div>
+    <div [ngClass]="{visible: !myForm.valid}" class="ui error message">Form is invalid</div>
     <button type="submit" class="ui button">Submit</button>
   </form>
 </div>
